--- a/styles/indexStyles.css
+++ b/styles/indexStyles.css
@@ -79,3 +79,8 @@ body {
   margin-right: auto;
   width: 50%;
 }
+
+.pixiCanvas {
+  border-radius: 15px;
+  box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
+}
